2010-05-13  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Removed whitespaces at end of line
	* Added feature: Add has() method to registry object

2010-05-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Replaced deprecated t3lib_div::makeInstanceClassName() calls
	* Fixed bug: Check against MIME type on file upload
	* Added feature: Default TypoScript definition for an avatar field
	* Fixed bug: Unique validation does not consider disabled user records

2010-05-05  Oliver Hader  <oliver@typo3.org>

	* Set compatibility to TYPO3 4.3
	* Raised version number to 0.2.0

2010-05-05  Oliver Hader  <oliver@typo3.org>

	* Raised version number to 0.1.0

2010-04-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: String data to be persisted in the database is escaped twice
	* Added feature: Integrate possibility to render HTML transformed values as markers
	* Added feature: Use internal TYPO3 filehandling to modify filenames etc.

2010-04-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Confirmation mail on editing the profile is triggered also if not required

2010-04-27  Oliver Hader  <oliver@typo3.org>

	* Extended onEditBeforeSave event to forward all fields and values to be compared to the observer
	* Added feature: Integrate possibility to define additional local language files via TypoScript
	* Added feature: Integrate possibility to upload files
	* Fixed bug: Password value is shown on editing the profile

2010-04-21  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate saltedpasswords transformer
	* Fixed bug: Password transformer was not triggered due to wrong TypoScript configuration

2010-04-20  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate possibility to return cancel status by observers
	* Added feature: Integrate ext_autoload.php file for TYPO3 4.3 disposal
	* Cleanup: Added inline type hints

2010-04-15  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Wrong plugin registration lead to PHP fatal error