@@ -1,3 +1,7 @@
+2010-05-14  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature: Extended exception codes to be used in the HTML template
+
 2010-05-13  Oliver Hader  <oliver@typo3.org>
 
 	* Cleanup: Removed whitespaces at end of line
